[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.4.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "reportlab>=4.4.2",
    "scipy>=1.16.0",
    "streamlit>=1.47.0",
    "svglib>=1.5.1",
    "svgwrite>=1.4.3",
]
